--- a/MinimizedVersionRSS/extension/manifest.json
+++ b/MinimizedVersionRSS/extension/manifest.json
@@ -12,8 +12,7 @@
 
   "content_scripts": [
     {
-    "matches": ["http://*/*"],
-    "js": ["jquery.js"]
+    "matches": ["http://*/*"]
     }
   ],
 
